--- a/huellaProto/huellaProto.iOS/huellaProto.iOS.csproj
+++ b/huellaProto/huellaProto.iOS/huellaProto.iOS.csproj
@@ -144,7 +144,9 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
-    <Reference Include="Xamarin.iOS" />
+    <Reference Include="Xamarin.iOS">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmLight">
@@ -158,7 +160,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\huellaProto\huellaProto.csproj">
-      <Project>{FC515E4F-E5E6-41C6-82AF-7A13B42910D5}</Project>
+      <Project>{79B2FCF7-5C60-4AE0-8CEB-9797AC014269}</Project>
       <Name>huellaProto</Name>
     </ProjectReference>
   </ItemGroup>
