--- a/huellaProto/huellaProto.Android/huellaProto.Android.csproj
+++ b/huellaProto/huellaProto.Android/huellaProto.Android.csproj
@@ -164,5 +164,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\huella_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\university.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\truck.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
