--- a/huellaProto/huellaProto/huellaProto.csproj
+++ b/huellaProto/huellaProto/huellaProto.csproj
@@ -10,18 +10,23 @@
   </ItemGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
-=======
+
     <EmbeddedResource Update="Views\CalcularInsti.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\EncuestaInsti.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Flota.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ForgotPass.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\huellaProto.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ListFlota.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Login.xaml">
@@ -33,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
->>>>>>> 6b61bcc7dadf0994470c0004ad51a082f56f566a
+
     <Folder Include="Models\" />
   </ItemGroup>
 
