--- a/huellaProto/huellaProto/huellaProto.csproj
+++ b/huellaProto/huellaProto/huellaProto.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="Views\ForgotPass.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\FormRegistrar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\huellaProto.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
