--- a/huellaProto/huellaProto.Android/huellaProto.Android.csproj
+++ b/huellaProto/huellaProto.Android/huellaProto.Android.csproj
@@ -191,5 +191,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\fondoCielo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Proyectos.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\IconUser.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cerrar_sesion.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
