--- a/huellaProto/huellaProto.Android/huellaProto.Android.csproj
+++ b/huellaProto/huellaProto.Android/huellaProto.Android.csproj
@@ -200,5 +200,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\cerrar_sesion.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\salir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\sprout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\users.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fondoCielo3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
