Calculo de huella y vista nueva

--- a/huellaProto/huellaProto/huellaProto.csproj
+++ b/huellaProto/huellaProto/huellaProto.csproj
@@ -21,6 +21,10 @@
     <EmbeddedResource Update="Views\CalcularInsti.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+
+    <EmbeddedResource Update="Views\CompensarPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EncuestaInsti.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
