--- a/huellaProto/huellaProto/huellaProto.csproj
+++ b/huellaProto/huellaProto/huellaProto.csproj
@@ -25,6 +25,10 @@
     <EmbeddedResource Update="Views\CompensarPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+
+    <EmbeddedResource Update="Views\cuentaRegresiva.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EncuestaInsti.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -73,6 +77,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\cuentaRegresiva.xaml.cs">
+      <DependentUpon>cuentaRegresiva.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\huellaProto.xaml.cs">
       <DependentUpon>huellaProto.xaml</DependentUpon>
     </Compile>
