--- a/huellaProto/huellaProto/huellaProto.csproj
+++ b/huellaProto/huellaProto/huellaProto.csproj
@@ -50,6 +50,9 @@
     <EmbeddedResource Update="Views\HuellaTabbed.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ListaProyectosPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ListFlota.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
