--- a/huellaProto/huellaProto.Android/Properties/AndroidManifest.xml
+++ b/huellaProto/huellaProto.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.huellaProto" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="27" />
-	<application android:label="huellaProto.Android"></application>
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="27" />
+	<application android:label="huellaProto.Android" android:icon="@drawable/logoVerde"></application>
 </manifest>
