--- a/huellaProto/huellaProto.iOS/Info.plist
+++ b/huellaProto/huellaProto.iOS/Info.plist
@@ -5,7 +5,6 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
-		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -21,18 +20,22 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>10.1</string>
 	<key>CFBundleDisplayName</key>
 	<string>huellaProto</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.huellaProto</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.5</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>huellaProto</string>
+	<string>Huella Carbono Sena</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 </dict>
 </plist>
