--- a/huellaProto/huellaProto.iOS/Info.plist
+++ b/huellaProto/huellaProto.iOS/Info.plist
@@ -27,8 +27,8 @@
 	<string>com.companyname.huellaProto</string>
 	<key>CFBundleVersion</key>
 	<string>1.5</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<!--<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>-->
 	<key>CFBundleName</key>
 	<string>Huella Carbono Sena</string>
 	<key>XSAppIconAssets</key>
